--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -1,1 +1,66 @@
-.Card {}
+/*.card {
+  width: 100%;
+  height: 90px;
+  margin: 0 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  background: #595959;
+}
+
+.card .card_background {
+  width: 100%;
+  border-radius: 5px;
+  transition: all 0.4s ease;
+  z-index: 0;
+  height: 100%;
+  box-shadow: 0px 2px 2px 1px #59595982;
+}*/
+.card {
+  border: transparent;
+  background: transparent;
+}
+.infos {
+  width: 100%;
+  background: #fff;
+  /*position: absolute;
+  top: 110px;*/
+  border-radius: 5px;
+  padding: 20px;
+  transition: all 0.4s ease;
+  z-index: 1;
+  box-shadow: 0px 2px 2px 1px #59595982;
+}
+
+.infos:hover {
+  transform: translate(0,-10px);
+}
+
+.infos:hover ~ img {
+  transform: translate(0,10px);
+}
+
+.title {
+  font-size: 0.9rem;
+  font-weight: 700;
+  margin-bottom: 5px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+}
+.text{
+    font-size: 0.9rem;
+    margin-bottom: 5px;
+}
+.date {
+  font-size: 0.7rem;
+  color: #F32C57;
+  pointer-events: none;
+}
+
+.read_more {
+  font-size: 0.7rem;
+  float: right;
+  color: #F32C57;
+}
