--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,18 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.mainContainer{
+  /* background-image: linear-gradient(45deg, #C3C3C1, #c3c3c159, #C3C3C1); */
+  /* min-height: 100vh; */
+}
+.card{
+  box-shadow: 0px 2px 2px 1px #59595982;
+}
+.table-striped > tbody > tr:nth-of-type(odd){
+      --bs-table-accent-bg: #def0ff3b;
+}
+.table-striped > thead{
+      background: #def0ff;
+      text-transform: uppercase;
+      font-size: 1rem;
+}
