--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap');
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Open Sans', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -25,4 +24,22 @@ code {
       background: #def0ff;
       text-transform: uppercase;
       font-size: 1rem;
+}
+section{
+  padding: 60px 0;
+}
+.section2{
+  background: url('assets/img/background-section2.jpg');
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+}
+.cardstyle2-left .card{
+  min-height: 350px;
+}
+.cardstyle2-right .card{
+      margin-bottom: 30px;
+}
+.cardstyle2 .card{
+  padding: 20px;
 }
